allow body text selection, z-index fix

--- a/src/styles/essay.scss
+++ b/src/styles/essay.scss
@@ -75,6 +75,7 @@
     font-family: Authentic;
     font-size: 19px;
     line-height: 158%;
+    z-index: 100;
 }
 @media only screen and (max-width: $breakpoint) {
     .essay_body{
@@ -161,6 +162,7 @@ $imagebasicwidth: 660px;
     flex-direction: column;
     gap: 20px;
     transition: 0.4s;
+    z-index: 100;
     @media only screen and (max-width: $breakpoint) {
         margin-top: 40px;
     }
@@ -295,6 +297,7 @@ $imagebasicwidth: 660px;
 .back_top{
     margin-top: 30px;
     cursor: pointer;
+    transition: 0.1s;
 }
 .back_top:hover {
     color: transparent;
